gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/fail22825b.d
version https://git-lfs.github.com/spec/v1
oid sha256:85b077ff447b124977762c205de787c3077176714f1f032726ee7bea739fbe8c
size 179
